k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: golang-crud
  labels:
    name: golang-crud
    purpose: clean-architecture-demo
