k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-crud-service
  namespace: golang-crud
  labels:
    app: golang-crud
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: golang-crud
